Fix bug where scrollbar was always displayed on cards

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -493,7 +493,7 @@ a
   height: 100%
   width: 100%
   padding: 12px 0
-  overflow-y: scroll
+  overflow-y: auto
   overflow-x: hidden
 
 .card__text
